force-app/main/default/objects/Case/fields/Closed_By_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>